@@ -15,6 +15,7 @@ Changes from 0.2p8 to 1.0:
 	- upgraded zlib to version 1.2.3
 	- upgraded openssh to version 4.3p2
 	- upgraded quagga to the latest stable (0.98.5-20060503)
+	- upgraded postgresql client to v7.3.14
 
 Changes from 0.2p7 to 0.2p8:
 	- added a patch to work around texas instruments' IRQ bug
